syntax = "proto3";

package spine.server.transport;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.server.transport";
option java_outer_classname = "TransportProto";
option java_multiple_files = true;

// Identifier of a transport channel.
message ChannelId {

    // The type URL of the messages transmitted through the channel.
    string target_type = 1;
}
